# timetablingsolver

./: .bazelrc  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  WORKSPACE
.github/workflows/: build.yml  manual.yml
data/example/: event_resources.csv  events.csv  parameters.csv  resources.csv
data/example_fr/: event_resources.csv  events.csv  parameters.csv  resources.csv
data/tests/: test_1.json  test_1_solution.json  test_2.json  test_2_solution.json
include/timetablingsolver/: algorithm_formatter.hpp  instance.hpp  instance_builder.hpp  optimize.hpp  solution.hpp
scripts/: build_dist_linux.sh  build_dist_mac_intel.sh  build_dist_windows.bat  requirements.txt  run.bat  run.mac.sh  run.sh  visualizer.py
src/: CMakeLists.txt  algorithm_formatter.cpp  instance.cpp  instance_builder.cpp  main.cpp  milp.cpp  milp.hpp  optimize.cpp  solution.cpp
test/: CMakeLists.txt  optimize_test.cpp
timetablingsolver/: BUILD  instance.cpp  instance.hpp  main.cpp  milp.cpp  milp.hpp  optimize.cpp  optimize.hpp  solution.cpp  solution.hpp  variables.bzl
